app/k8s/local/yaml/app-server-stateful.yaml
####################################################################
######################### STATEFUL BACKEND #########################
####################################################################
# Service for Stateful containers, listening on port 3002
apiVersion: v1
kind: Service
metadata:
  name: app-server-stateful
spec:
  selector:
    app: stateful
    tier: backend
  ports:
  - port: 3002
    name: http
    targetPort: http-stateful
---
# Deployment for pocbackend containers, listening on port 3000
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateful-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stateful
      tier: backend
  template:
    metadata:
      labels:
        app: stateful
        tier: backend
    spec:
       containers:
       - name: app-server
         image: app-server:1.0
         ports:
          - name: http-stateful
            containerPort: 3000
         volumeMounts:
          - mountPath : /log
            name: log-volume
          - mountPath : /config
            name: config-volume
       - name: local-session-manager
         image: local-session-manager:1.0
         ports:
          - name: http-lmgt
            containerPort: 3400
         volumeMounts:
          - mountPath : /log
            name: log-volume
          - mountPath : /config
            name: config-volume
       volumes:
       - name: log-volume
         hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/log'           
           type: Directory
       - name: config-volume
         hostPath:           
           path: '/host_mnt/D/dev/poc-k8s/app/config/local'           
           type: Directory
