app/k8s/local/yaml/central-session-manager.yaml
##############################################################
################# CENTRAL SESSION SERVICE ####################
##############################################################
---
# Service for Local Session Containers, listening on port 3400
apiVersion: v1
kind: Service
metadata:
  name: session-mgt-svc
spec:
  # clusterIP: None
  type: NodePort
  selector:
    app: session-management
    tier: appserver
  ports:
  - port: 3004
    name: http-session-mgt
    targetPort: http
    nodePort: 30004
  - port: 3005
    name: tcp1
    targetPort: tcp1
  - port: 3006
    name: tcp2
    targetPort: tcp2
  - port: 3007
    name: tcp3
    targetPort: tcp3
  - port: 3008
    name: tcp4
    targetPort: tcp4
  - port: 3009
    name: tcp5
    targetPort: tcp5
  - port: 3010
    name: tcp6
    targetPort: tcp6
  - port: 3011
    name: tcp7
    targetPort: tcp7
  - port: 3012
    name: tcp8
    targetPort: tcp8
  - port: 3013
    name: tcp9
    targetPort: tcp9
  - port: 3014
    name: tcp10
    targetPort: tcp10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-session-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central-session-manager
      tier: appserver
  template:
    metadata:
      labels:
        app: central-session-manager
        tier: appserver
    spec:
      containers:
      - name: central-session-manager
        image: central-session-manager:1.0        
        ports:
           - name: http
             containerPort: 3004
           - protocol: TCP
             name: tcp1
             containerPort: 3005
           - protocol: TCP
             name: tcp2
             containerPort: 3006
           - protocol: TCP
             name: tcp3
             containerPort: 3007
           - protocol: TCP
             name: tcp4
             containerPort: 3008
           - protocol: TCP
             name: tcp5
             containerPort: 3009
           - protocol: TCP
             name: tcp6
             containerPort: 3010
           - protocol: TCP
             name: tcp7
             containerPort: 3011
           - protocol: TCP
             name: tcp8
             containerPort: 3012
           - protocol: TCP
             name: tcp9
             containerPort: 3013
           - protocol: TCP
             name: tcp10
             containerPort: 3014
        volumeMounts:
           - mountPath : /log
             name: log-volume
           - mountPath : /config
             name: config-volume
      volumes:
      - name: log-volume
        hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/log'           
           type: Directory
      - name: config-volume
        hostPath:           
           path: '/host_mnt/D/dev/poc-k8s/app/config/local'           
           type: Directory
