app/k8s/local/yaml/web-server.yaml
#############################################################
######################### FRONT END #########################

# Service exposing frontend on node port 30000
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  selector:
    app: webapp
    tier: webserver
  ports:
  - port: 3500
    name: http-fr
    targetPort: http-front
---
# deployment of the container pocfrontend listening to port 3500
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
      tier: webserver
  template:
    metadata:
      labels:
        app: webapp
        tier: webserver
    spec:
      containers:
      - name: web-server
        image: web-server:1.0               
        ports:
           - name: http-front
             containerPort: 3500      
        volumeMounts:
           - mountPath : /log
             name: log-volume
           - mountPath : /config
             name: config-volume
      volumes:
      - name: log-volume
        hostPath:           
           path: '/host_mnt/d/dev/poc-k8s/log'           
           type: Directory
      - name: config-volume
        hostPath:           
           path: '/host_mnt/D/dev/poc-k8s/app/config/local'           
           type: Directory
